--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,15 @@
+@media (max-width: 600px) {
+  .project-image {
+    height: 40vw;
+    min-height: 180px;
+    max-height: 300px;
+  }
+  .project-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
 
 html, body {
   min-width: 100vw;
